--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "sensio/buzz-bundle": "dev-master",
-        "curl/curl": "1.1.3"
+        "curl/curl": "1.1.3",
+        "sensio/generator-bundle": "2.3.x-dev"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
         "post-root-package-install": [
