--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,8 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
+         mappings:
+                    TestAppMainBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
